welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: type mismatch;
 found   : Int(19)
 required: Boolean
    if (13>a>19 || 13<=b && b<=19){
             ^loneTeen:8: error: type mismatch;
 found   : Int(19)
 required: Boolean
  	}else if(13<=a && a<=19 || 13>b>19){
                                        ^